--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+:root {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+}
+
+[data-theme="dark"] {
+  --bg-color: linear-gradient(0deg, #121212, #121212),
+    linear-gradient(0deg, #18181b, #18181b);
+  --text-color: #ffffff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,4 +29,11 @@
 }
 .poppins {
   font-family: "Poppins", serif;
+}
+
+.workspace {
+  min-height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  background: var(--bg-color);
 }
