--- a/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
+++ b/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
@@ -4,7 +4,7 @@
 }
 [data-theme="dark"] {
   --mwf-color: #ffffff14;
-  --form-bg-color:#FFFFFF80;
+  --form-bg-color: #ffffff80;
 }
 
 .main-workspace {
@@ -22,12 +22,14 @@
 .mwf-folder {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 8px 16px;
   background-color: var(--mwf-color);
   border-radius: 6px;
   color: var(--nav-text-color);
   cursor: pointer;
   font-weight: 600;
+  min-width: 171px;
 }
 .mwf-create > span {
   margin-left: 10px;
@@ -36,7 +38,7 @@
   margin-left: 15px;
   cursor: pointer;
   color: #f55050;
-  font-size:24px;
+  font-size: 24px;
 }
 
 .mw-forms {
@@ -44,7 +46,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
   grid-gap: 40px 20px;
-  width: 100%; 
+  width: 100%;
 }
 .mwf-create-form {
   height: 270px;
@@ -67,7 +69,7 @@
   height: 270px;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF;
+  color: #ffffff;
   background-color: var(--form-bg-color);
   border-radius: 6px;
   cursor: pointer;
