--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,6 @@
 .workspace, .form {
   min-height: 100vh;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: var(--bg-color);
 }
