--- a/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
+++ b/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
@@ -30,6 +30,7 @@
   cursor: pointer;
   font-weight: 600;
   min-width: 171px;
+  position: relative;
 }
 .mwf-create > span {
   margin-left: 10px;
@@ -39,6 +40,9 @@
   cursor: pointer;
   color: #f55050;
   font-size: 24px;
+  position: absolute;
+  right: 10px;
+  z-index: 10;
 }
 
 .mw-forms {
