--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   font-family: "Poppins", serif;
 }
 
-.workspace, .form {
+.workspace, .form, .folder {
   min-height: 100vh;
   width: 100%;
   /* overflow: hidden; */
