--- a/src/components/ResponseComponent/MainResponse.css
+++ b/src/components/ResponseComponent/MainResponse.css
@@ -8,8 +8,7 @@
   min-height: 100vh;
   width: 100%;
   overflow-y: auto;
-  padding: 10px;
-  padding: 80px 0;
+  padding: 80px 10px;
 }
 
 .bot-bubble {
@@ -79,4 +78,9 @@
   font-size: 20px;
   cursor: pointer;
   padding: 8px 0;
+}
+@media only screen and (max-width: 768px){
+  .chat-history{
+    padding: 10px;
+  }
 }
