Fix: Fixed minor bugs, like redirecting user to the path that user tried to access before logging in, Update: Updated all files and removed un necessary console logs, Fix: Fixed updateForm slice to re render the activeForm when flow changes or updates, Add: Added activeFolder class to activeFolder, Update: Updated Private Route component to store the requested path in local Storage if not logged in, Fix: Fixed email update in settings component, Fix: Resetted the states of active form and active folder when none of them is active, Remove: Removed unneccary comments and this is most probably the final commit before submitting

--- a/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
+++ b/src/components/WorkspaceComponents/MainWorkspace/MainWorkspace.css
@@ -1,10 +1,14 @@
 :root {
   --mwf-color: #00000014;
   --form-bg-color: #70707080;
+  --mwf-bg-color-reverse: #ffffff14;
+  --mwf-color-reverse: #ffffffeb;
 }
 [data-theme="dark"] {
   --mwf-color: #ffffff14;
   --form-bg-color: #ffffff80;
+  --mwf-bg-color-reverse: #fff;
+  --mwf-color-reverse: #000000eb;
 }
 
 .main-workspace {
@@ -32,6 +36,12 @@
   min-width: 171px;
   position: relative;
 }
+
+.activeFolder {
+  background-color: var(--mwf-bg-color-reverse);
+  color: var(--mwf-color-reverse);
+}
+
 .mwf-create > span {
   margin-left: 10px;
 }
